# raspberry-pi-pico

./: .gitignore  README.md
KeyboardHIDBLE/: CMAKELists.txt
KeyboardHIDBLE/src/: main.c
KeyboardHIDBLE/src/btstack/gatt/: keyboard.gatt
KeyboardHIDBTClassic/: CMAKELists.txt  kb_report_original.txt  kb_report_v1 copy.txt  kb_report_v1.txt  kb_report_v2.txt  kb_report_v3.txt
KeyboardHIDBTClassic/src/btstack/: btstack_hid.c
KeyboardHIDBTClassic/src/btstack/header/: btstack_config.h  btstack_hid.h  hid_descriptor.h
KeyboardHIDBTClassic/src/tusb/: tusb_hid.c
KeyboardHIDBTClassic/src/tusb/header/: tusb_lib.h
temperature/: CMakeLists.txt  source.c  source.h
temperature/src/: main.c  temperature.c
temperature/src/header/: lcd.h  main.h  temperature.h
usbHID/: CMAKELists.txt
usbHID/src/: btstack_hid_kb.c  main.c  tusb_hid.c
usbHID/src/btstack/: btstack_hid.c
usbHID/src/btstack/header/: btstack_config.h  hid_descriptor.h
usbHID/src/config/: keyboard_config.h
usbHID/src/header/: btstack_lib.h  main.h  pico_queue.h  tusb_lib.h
usbHID/src/tusb/: tusb_hid.c
usbHIDble/: CMAKELists.txt
